feat: Implement notification categorization, add order history notes, and new validation resources.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -160,6 +160,18 @@
   "@orders": {
     "description": "الطلبات"
   },
+  "notificationAll": "الكل",
+  "@notificationAll": {
+    "description": "الكل"
+  },
+  "notificationReviews": "التقييمات",
+  "@notificationReviews": {
+    "description": "التقييمات"
+  },
+  "notificationSystem": "النظام",
+  "@notificationSystem": {
+    "description": "النظام"
+  },
   "favorites": "المفضلة",
   "@favorites": {
     "description": "المفضلة"
