--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -160,6 +160,18 @@
   "@orders": {
     "description": "Siparişler"
   },
+  "notificationAll": "Tümü",
+  "@notificationAll": {
+    "description": "Tümü"
+  },
+  "notificationReviews": "Yorumlar",
+  "@notificationReviews": {
+    "description": "Yorumlar"
+  },
+  "notificationSystem": "Sistem",
+  "@notificationSystem": {
+    "description": "Sistem"
+  },
   "favorites": "Favoriler",
   "@favorites": {
     "description": "Favoriler"
