--- a/src/Talabi.Api/Resources/ValidationResources.ar.resx
+++ b/src/Talabi.Api/Resources/ValidationResources.ar.resx
@@ -58,64 +58,64 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  
-  <!-- Courier Notifications -->
-  <data name="NewOrderAssigned" xml:space="preserve">
-    <value>New order assigned</value>
+  <data name="CampaignNotActive" xml:space="preserve">
+    <value>الحملة غير نشطة.</value>
   </data>
-  <data name="OrderAssignedMessage" xml:space="preserve">
-    <value>Order #{0} has been assigned to you. Please review and take action quickly.</value>
+  <data name="CampaignFirstOrderOnly" xml:space="preserve">
+    <value>هذه الحملة للطلبات الأولى فقط.</value>
   </data>
-  <data name="OrderOutForDelivery" xml:space="preserve">
-    <value>Order out for delivery</value>
+  <data name="CampaignExpiredOrNotStarted" xml:space="preserve">
+    <value>انتهت صلاحية الحملة أو لم تبدأ بعد.</value>
   </data>
-  <data name="OrderOutForDeliveryMessage" xml:space="preserve">
-    <value>Order #{0} has left for customer delivery.</value>
+  <data name="CampaignNotValidAtThisTime" xml:space="preserve">
+    <value>الحملة غير صالحة في هذا الوقت.</value>
   </data>
-  <data name="DeliveryCompleted" xml:space="preserve">
-    <value>Delivery completed</value>
+  <data name="CampaignNotValidInCity" xml:space="preserve">
+    <value>الحملة غير صالحة في هذه المدينة.</value>
   </data>
-  <data name="DeliveryCompletedMessage" xml:space="preserve">
-    <value>Congratulations! You have successfully delivered order #{0}.</value>
+  <data name="CampaignNotValidInDistrict" xml:space="preserve">
+    <value>الحملة غير صالحة في هذه المنطقة.</value>
   </data>
-  
-  <!-- Customer Notifications -->
-  <data name="OrderOnTheWay" xml:space="preserve">
-    <value>Order On The Way</value>
+  <data name="CampaignVendorTypeMismatch" xml:space="preserve">
+    <value>الحملة غير صالحة لهذه العناصر (عدم تطابق نوع البائع).</value>
   </data>
-  <data name="OrderOnTheWayMessage" xml:space="preserve">
-    <value>Your order #{0} has left for delivery.</value>
+  <data name="CampaignMinCartAmountRequired" xml:space="preserve">
+    <value>الحد الأدنى لمبلغ سلة التسوق هو {0}.</value>
   </data>
-  <data name="OrderDelivered" xml:space="preserve">
-    <value>Order Delivered</value>
+  <data name="CampaignRequiresSpecificProducts" xml:space="preserve">
+    <value>تتطلب الحملة منتجات محددة.</value>
   </data>
-  <data name="OrderDeliveredMessage" xml:space="preserve">
-    <value>Your order #{0} has been successfully delivered. Enjoy your meal!</value>
+  <data name="CouponNotActive" xml:space="preserve">
+    <value>القسيمة غير نشطة.</value>
   </data>
-  
-  <!-- Vendor Notifications -->
-  <data name="CourierRejectedOrder" xml:space="preserve">
-    <value>Courier Rejected Order</value>
+  <data name="CouponFirstOrderOnly" xml:space="preserve">
+    <value>هذه القسيمة للطلبات الأولى فقط.</value>
   </data>
-  <data name="CourierRejectedOrderMessage" xml:space="preserve">
-    <value>Order #Order.{0} was rejected by {1}. Reason: {2}. Order has been set back to Ready status.</value>
+  <data name="CouponExpired" xml:space="preserve">
+    <value>انتهت صلاحية القسيمة.</value>
   </data>
-  
-  <!-- Order History Notes -->
-  <data name="OrderAssignedHistoryNote" xml:space="preserve">
-    <value>Order assigned to courier {0}</value>
+  <data name="CouponNotValidAtThisTime" xml:space="preserve">
+    <value>القسيمة غير صالحة في هذا الوقت.</value>
   </data>
-  <data name="OrderAcceptedHistoryNote" xml:space="preserve">
-    <value>Order accepted by courier {0}</value>
+  <data name="CouponVendorTypeMismatch" xml:space="preserve">
+    <value>القسيمة غير صالحة لهذه العناصر (عدم تطابق نوع البائع).</value>
   </data>
-  <data name="OrderRejectedHistoryNote" xml:space="preserve">
-    <value>Order rejected by courier {0}. Reason: {1}</value>
+  <data name="CouponVendorMismatch" xml:space="preserve">
+    <value>القسيمة غير صالحة لهذا البائع.</value>
   </data>
-  <data name="OrderPickedUpHistoryNote" xml:space="preserve">
-    <value>Order picked up by courier {0}</value>
+  <data name="CouponNotValidInCity" xml:space="preserve">
+    <value>القسيمة غير صالحة في هذه المدينة.</value>
   </data>
-  <data name="OrderDeliveredHistoryNote" xml:space="preserve">
-    <value>Order delivered by courier {0}</value>
+  <data name="CouponNotValidInDistrict" xml:space="preserve">
+    <value>القسيمة غير صالحة في هذه المنطقة.</value>
+  </data>
+  <data name="CouponRequiresSpecificCategories" xml:space="preserve">
+    <value>تتطلب القسيمة فئات محددة.</value>
+  </data>
+  <data name="CouponRequiresSpecificProducts" xml:space="preserve">
+    <value>تتطلب القسيمة منتجات محددة.</value>
+  </data>
+  <data name="CouponMinCartAmountRequired" xml:space="preserve">
+    <value>الحد الأدنى لمبلغ سلة التسوق هو {0}.</value>
   </data>
 </root>
-
